maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	gauche();
        ^Escaper:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (!estFaceMur) {
        ^Escaper:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	droite();
        ^