maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
	while (!estSurBiscuit) {
		if (!murAGauche()) {
			gauche();
		}
		if (!estFaceMur) {
			avance()
		}
	}
	
}
def murAGauche():Int {
	gauche();
	if (!estFaceMur) {
		return true
	} else {
		return false
	}
	droite();
}
